src/objects/Upgrade_History_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Upgrade History</relationshipLabel>
        <relationshipName>Upgrade_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Account__r.PersonContact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Product_Type__c</fullName>
        <formula>TEXT(Pricing_Option_From__r.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Service__c</fullName>
        <formula>Pricing_Option_From__r.ServiceId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <formula>Account__r.Guid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Parameters__c</fullName>
        <description>Extra parameters in JSON format to pass any additional parameters across.</description>
        <inlineHelpText>Extra parameters in JSON format to pass any additional parameters across.</inlineHelpText>
        <label>Other Parameters</label>
        <length>64000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PersonAccountId__c</fullName>
        <formula>Account__r.PersonContact.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PersonAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Option_From__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pricing Option From</label>
        <referenceTo>Pricing_Options__c</referenceTo>
        <relationshipLabel>Upgrade History</relationshipLabel>
        <relationshipName>Upgrade_History</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Option_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pricing Option To</label>
        <referenceTo>Pricing_Options__c</referenceTo>
        <relationshipLabel>Upgrade History (Pricing Options To)</relationshipLabel>
        <relationshipName>Upgrade_History1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_Number_Static__c</fullName>
        <formula>Account__r.Subscriber_Number_static__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Number Static</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Product_Type__c</fullName>
        <formula>TEXT(Pricing_Option_To__r.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Service__c</fullName>
        <formula>Pricing_Option_To__r.ServiceId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Upgrade History Item</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Upgrade History Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Upgrade History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>